eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultcore-api-service
spec:
  selector:
    app: vaultcore-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
